--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,39 +1,43 @@
 @font-face {
-    font-family: 'Quicksand-Medium', sans-serif;
+    font-family: 'Quicksand-Medium';
     font-weight: 500;
     font-style: normal;
-    font-display: swap;
+  
     src: local('Quicksand-Medium'), //если у пользователя шрифт находится на пк,то он скачает его с локал.
-        url('../fonts/Quicksand-Medium.woff')format(woff2),
-        url('../fonts/Quicksand-Medium.woff')format(woff),
+        url('../fonts/Quicksand-Medium.woff')format('woff2'),
+        url('../fonts/Quicksand-Medium.woff')format('woff');
+        font-display: swap;
 }
 
 @font-face {
-    font-family: 'Quicksand-Regular', sans-serif;
+    font-family: 'Quicksand-Regular';
     font-weight: 400;
     font-style: normal;
-    font-display: swap;
+    
     src: local('Quicksand-Regular'), //если у пользователя шрифт находится на пк,то он скачает его с локал.
-        url('../fonts/Quicksand-Regular.woff')format(woff2),
-        url('../fonts/Quicksand-Regular.woff')format(woff),
+        url('../fonts/Quicksand-Regular.woff')format('woff2'),
+        url('../fonts/Quicksand-Regular.woff')format('woff');
+        font-display: swap;
 }
 
 @font-face {
-    font-family: 'Roboto-Bold', sans-serif;
+    font-family: 'Roboto-Bold';
     font-weight: 700;
     font-style: normal;
-    font-display: swap;
+ 
     src: local('Roboto-Bold'), //если у пользователя шрифт находится на пк,то он скачает его с локал.
-        url('../fonts/Roboto-Bold.woff')format(woff2),
-        url('../fonts/Roboto-Bold.woff')format(woff),
+        url('../fonts/Roboto-Bold.woff')format('woff2'),
+        url('../fonts/Roboto-Bold.woff')format('woff');
+        font-display: swap;
 }
 
 @font-face {
-    font-family: 'Roboto-Regular', sans-serif;
+    font-family: 'Roboto-Regular';
     font-weight: 400;
     font-style: normal;
-    font-display: swap;
+  
     src: local('Roboto-Regular'), //если у пользователя шрифт находится на пк,то он скачает его с локал.
         url('../fonts/Roboto-Regular.woff')format(woff2),
-        url('../fonts/Roboto-Regular.woff')format(woff),
+        url('../fonts/Roboto-Regular.woff')format(woff);
+        font-display: swap;
 }
