--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,6 +1,7 @@
 $accent-color:#fe3e57;
 $deafualt-color:#8d8d8d;
 $title-color:#29282d;
+$bg-color:#f6f6f6;
 
 %quicksand-400 {
     font-family: 'Quicksand-Regular', sans-serif;
@@ -8,7 +9,7 @@ $title-color:#29282d;
 }
 
 %quicksand-500 {
-    font-family: 'Quicksand-Medium', sans-serif;
+    font-family: 'Quicksand-Medium', sans-serif;;
     font-weight: 500;
 }
 
