--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -28,17 +28,17 @@
         color: $title-color;
         border-color: transparent;
         padding-bottom: 1px;
-        @extend  %quicksand-400;
+        @extend %quicksand-400;
 
         &:hover {
             color: $accent-color;
             border-bottom: 1px solid $accent-color;
-            @extend  %quicksand-500;
+            @extend %quicksand-500;
         }
     }
 
     &__list-link--active {
-        @extend  %quicksand-500;
+        @extend %quicksand-500;
         color: $accent-color;
         border-bottom: 1px solid $accent-color;
     }
@@ -69,5 +69,81 @@
 }
 
 
+
+.footer {
+    background-color: $bg-color;
+}
+
+.footer-top {
+    padding: 70px 0 40px;
+    border-bottom: 1px solid #ececec;
+    display: flex;
+    justify-content: space-between;
+
+    &__contact {
+        width: 250px;
+        margin-right: 50px;
+    }
+
+    &__nav {
+        width: 170px;
+        margin-right: 30px;
+    }
+
+    &__item-form {
+        max-width: 412px;
+    }
+
+    &__logo {
+        margin-bottom: 33px;
+        display: block;
+    }
+
+    &__adress {
+        display: block;
+    }
+
+    &__email {
+        display: block;
+    }
+
+    &__phone {
+        line-height: 36px;
+    }
+
+    &__social-list {
+        display: flex;
+        margin-top: 30px;
+        align-items: center;
+    }
+
+    &__social-item+.footer-top__social-item {
+        padding-left: 18px;
+    }
+
+    &__social-link{
+        transition: all 0.3s;
+        path{
+            fill:$deafualt-color;
+        }
+        &:hover{
+            path{
+                fill:$accent-color;
+            }
+        }
+    }
+
+    &__title {
+        margin-bottom: 43px;
+        @extend %Roboto-400;
+        color:$title-color;
+        font-size: 22px;
+        line-height: 1;
+    }
+
+    &__link{
+    line-height: 36px;
+    }
+}
 
 @import'media';
