--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -121,29 +121,78 @@
         padding-left: 18px;
     }
 
-    &__social-link{
+    &__social-link {
         transition: all 0.3s;
-        path{
-            fill:$deafualt-color;
+
+        path {
+            fill: $deafualt-color;
         }
-        &:hover{
-            path{
-                fill:$accent-color;
+
+        &:hover {
+            path {
+                fill: $accent-color;
             }
         }
     }
 
     &__title {
-        margin-bottom: 43px;
+        margin-bottom: 40px;
         @extend %Roboto-400;
-        color:$title-color;
+        color: $title-color;
         font-size: 22px;
         line-height: 1;
     }
 
-    &__link{
-    line-height: 36px;
+    &__link {
+        line-height: 36px;
+    }
+
+    &__text {
+        margin-bottom: 25px;
+    }
+
+    &__form {}
+
+    &__form-input {
+        background-color: #fff;
+        max-width: 270px;
+        width: 100%;
+        border: none;
+        padding: 12px 10px 12px 15px;
+        box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
+
+        &::placeholder {
+            color: $deafualt-color;
+            font-size: 16px;
+        }
+    }
+
+    &__form-btn {
+        border: none;
+        color: #fff;
+        background-color: $accent-color;
+        text-transform: uppercase;
+        padding: 12px 26px;
+        box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+        cursor: pointer;
     }
 }
+
+.footer-bottom{
+    height: 75px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    &__accept{
+
+    }
+
+    &__accept-img{
+        display: inline;
+        margin-left: 25px;
+        vertical-align: middle;
+    }
+}
+
 
 @import'media';
