--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,3 +1,4 @@
+
 @import 'vars';
 @import 'fonts';
 @import 'reset';
@@ -188,7 +189,7 @@
 
 
 .top-slider {
-    background-image: url('../images/top-slider-bg.png');
+    background-image: url('../images/decor/top-slider-bg.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-color: $bg-color;
@@ -233,6 +234,7 @@
 
         li {
             padding: 0 5px;
+
             button {
                 padding: 0;
                 font-size: 0;
@@ -266,6 +268,186 @@
                 }
             }
         }
+    }
+}
+
+
+.categories-info {
+    padding: 120px 0 120px;
+    background-image: url('../images/decor/categories-left-bg.png');
+    background-repeat: no-repeat;
+    background-position: left center;
+
+    &__inner {
+        background-image: url('../images/decor/categories-right-bg.png');
+        background-repeat: no-repeat;
+        background-position: right center;
+    }
+
+    .info {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 110px;
+        position: relative;
+
+        &::before,
+        &::after {
+            content: "";
+            position: absolute;
+            z-index: -1;
+        }
+
+        &::before {
+            background-image: url('../images/decor/info-before-bg.svg');
+            top: -40px;
+            left: -45px;
+            height: 120px;
+            width: 121px;
+        }
+
+        &::after {
+            background-image: url('../images/decor/info-after-bg.svg');
+            bottom: -25px;
+            right: -25px;
+            width: 65px;
+            height: 52px;
+        }
+
+        &__item {
+            background-color: #fff;
+            width: 370px;
+            padding: 60px 30px;
+            box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
+        }
+
+        &__item-title {
+            margin: 35px 0 10px;
+            color: $title-color;
+            font-size: 22px;
+            @extend %Roboto-400
+        }
+    }
+}
+
+.categories {
+    &__items {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-gap: 30px;
+        min-height: 636px;
+    }
+
+    &__item {
+        padding-top: 35px;
+        padding-left: 45px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+
+        &:nth-child(1) {
+            grid-row: span 2;
+
+            .categories__item-subtitle,
+            .categories__link:hover {
+                color: #5800e4;
+            }
+        }
+
+        &:nth-child(2) {
+            display: flex;
+            grid-column: 2 span;
+            flex-direction: column;
+            justify-content: center;
+            padding-top: 0;
+
+            .categories__item-subtitle,
+            .categories__link:hover {
+                color: $accent-color;
+            }
+        }
+
+        &:nth-child(3) {
+
+            .categories__item-subtitle,
+            .categories__link:hover {
+                color: #ffb534;
+            }
+        }
+
+        &:nth-child(4) {
+
+            .categories__item-subtitle,
+            .categories__link:hover {
+                color: #34c3ff;
+            }
+        }
+    }
+
+    &__item-subtitle {
+
+        margin-bottom: 5px;
+    }
+
+    &__item-title {
+        font-size: 22px;
+        color: $title-color;
+        margin-bottom: 16px;
+    }
+
+    &__link {
+        text-transform: uppercase;
+        color: $title-color;
+        transition: all 0.5s;
+        @extend %Roboto-400;
+    }
+}
+
+.video-fashion {
+    background-color: $bg-color;
+    background-image: url('../images/decor/pattern.svg');
+    background-position: cover;
+    background-repeat: no-repeat;
+    padding: 125px 0 125px;
+
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__popup {
+        max-width: 530px;
+        height: 480px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+    }
+
+    &__content {
+        max-width: 570px;
+    }
+    &__subtitle{
+        font-size: 22px;
+        padding-top: 75px;
+        color:$accent-color;
+        margin-bottom: 5px;
+    }
+    
+    &__title{
+        text-align-last: left;
+        margin-bottom: 55px;
+    }
+
+    &__text{
+        margin-bottom: 55px;
+    }
+
+    &__link{
+        @extend %btn;
     }
 }
 
