--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -458,13 +458,13 @@
 
     &__items {
         display: grid;
-        grid-template-columns:repeat(3,1fr);
+        grid-template-columns: repeat(3, 1fr);
         grid-gap: 45px 30px;
     }
 
-    &__link{
+    &__link {
         text-transform: uppercase;
-        color:$title-color;
+        color: $title-color;
         display: inline-block;
         border: 1px solid $accent-color;
         padding: 14px 27px;
@@ -553,12 +553,12 @@
         display: flex;
         justify-content: center;
         @extend %Roboto-400;
-      
+
     }
 
     &__new-price {
         padding: 0 12px;
-        color:$title-color;
+        color: $title-color;
     }
 
     &__old-price {
@@ -566,8 +566,8 @@
         text-decoration: line-through;
     }
 
-    &--sale{
-        .product-item__img-box::after{
+    &--sale {
+        .product-item__img-box::after {
             content: "SALE";
             @extend %btn;
             position: absolute;
@@ -579,8 +579,78 @@
     }
 }
 
-.star{
+.star {
     margin: 0 auto;
+}
+
+.promo {
+    background-image: url('../images/promo-bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    padding: 150px 0 160px;
+    text-align: center;
+
+    &__inner {
+        max-width: 570px;
+        max-width: 570px;
+        margin-left: auto;
+        width: 100%;
+    }
+
+    &__subtitle {
+        color: $accent-color;
+        text-transform: uppercase;
+        margin-bottom: 10px;
+        font-size: 22px;
+    }
+
+    &__clock {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 55px;
+    }
+
+    &__clock-item {
+        background-color: #fff;
+        width: 120px;
+        height: 120px;
+        border-radius: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        span{
+            font-size: 48px;
+            @extend %Roboto-700;
+            margin:12px 0 7px;
+            color: $title-color;
+
+        }
+
+    }
+
+
+    &__link {
+        text-transform: uppercase;
+        color: $title-color;
+        display: inline-block;
+        border: 1px solid $accent-color;
+        padding: 14px 27px;
+        margin-top: 55px;
+    }
+}
+
+.partners {
+    padding-top: 75px;
+
+    &__list {
+        height: 170px;
+        display: flex;
+        justify-content: center;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
 
 
