--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -620,10 +620,11 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        span{
+
+        span {
             font-size: 48px;
             @extend %Roboto-700;
-            margin:12px 0 7px;
+            margin: 12px 0 7px;
             color: $title-color;
 
         }
@@ -650,6 +651,118 @@
         justify-content: center;
         justify-content: space-between;
         align-items: center;
+    }
+}
+
+
+.blog {
+    padding: 50px 0 160px;
+    background-image: url('../images/blog-bg.svg');
+    background-repeat: no-repeat;
+    background-position: center center;
+
+    &__items {
+        display: flex;
+        justify-content: space-between;
+        position: relative;
+
+        &::after {
+            content: "";
+            position: absolute;
+            right: -20px;
+            top: -25px;
+            background-image: url('../images/decor/blog-decor.svg');
+            background-repeat: no-repeat;
+            width: 156px;
+            height: 53px;
+            z-index: -1;
+        }
+    }
+
+    &__item {
+        max-width: 370px;
+        border: 1px solid #ececec;
+        background-color: rgb(255, 255, 255);
+        box-shadow: none;
+        transition: all 0.6s;
+
+
+        &:hover {
+            box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
+            border: none;
+
+            .blog__item-link {
+                color: $accent-color;
+
+                &::after {
+                    background-image: url('../images/icons/arrow-accent.svg');
+                }
+            }
+        }
+    }
+
+    &__item-imglink {
+        display: block;
+
+        img {
+            height: 288px;
+            object-fit: cover;
+        }
+    }
+
+    &__item-box {
+        padding-left: 30px 40px;
+    }
+
+    &__item-info {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 20px;
+    }
+
+    &__item-author,
+    &__item-data {
+        padding-left: 30px;
+        position: relative;
+
+        &::after {
+            content: "";
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            left: 0;
+            top: 5px;
+        }
+    }
+
+    &__item-author::after {
+        background-image: url('../images/icons/user-grey.svg')
+    }
+
+    &__item-data::after {
+        background-image: url('../images/icons/time.svg')
+    }
+
+    &__item-title {
+        color: $title-color;
+        @extend %Roboto-400;
+        font-size: 22px;
+        margin-bottom: 22px;
+    }
+
+    &__item-link {
+        position: relative;
+
+    }
+
+    &__item-link::after {
+        content: "";
+        background-image: url('../images/icons/arrow.svg');
+        width: 10px;
+        height: 8px;
+        position: absolute;
+        right: -20px;
+        top: 7px
     }
 }
 
