--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -834,6 +834,10 @@
     &__error{
         color:$accent-color;
     }
+
+    &__text{
+        margin-bottom: 25px;    
+    }
 }
 
 @import'media';
