--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1235,6 +1235,7 @@
         justify-content: space-between;
         flex-wrap: wrap;
         border-bottom: 1px solid #ececec;
+
         .product-item {
             margin-bottom: 40px;
         }
@@ -1310,6 +1311,502 @@
     height: 5px;
     border: none;
     background-image: url('../images/icons/angle-down.svg')
+}
+
+.product-page {
+    padding: 120px 0 0;
+}
+
+.product-one {
+    &__inner {
+        display: flex;
+    }
+
+    &__slide {
+        width: 730px;
+        margin-right: 70px;
+    }
+
+    &__content {
+        max-width: 370px;
+    }
+
+    &__title {
+        margin-bottom: 20px;
+        color: $title-color;
+        font-size: 20px;
+    }
+
+    &__box {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 35px;
+    }
+
+    &__price {
+        display: flex;
+        font-size: 18px;
+    }
+
+    &__price-new {
+        color: $title-color;
+    }
+
+    &__price-old {
+        padding-left: 15px;
+        text-decoration: line-through;
+    }
+
+    &__item-star {
+        display: flex;
+        align-items: center;
+
+        span {
+            padding-left: 8px;
+            color: $title-color;
+            font-size: 22px;
+        }
+    }
+
+    &__item-btn {
+        @extend %btn;
+        border: none;
+        margin-left: 15px;
+    }
+
+    .jq-number__field {
+        width: 100px;
+        border: 1px solid #f0f0f0;
+        border-radius: 0;
+        box-shadow: inset 1px 1px #f1f1f1;
+        transform: translateY(1px);
+    }
+
+    .jq-number__field input {
+        width: 100%;
+        height: 50px;
+        width: 114px;
+        border: none;
+        outline: none;
+        font: 14px Arial, sans-serif;
+        color: $title-color;
+        @extend %quicksand-500;
+        text-align: center;
+    }
+
+    .jq-number {
+        padding: 0;
+        position: relative;
+    }
+
+    .jq-number__spin {
+        position: absolute;
+        width: 12px;
+        height: 12px;
+        cursor: pointer;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+
+    .jq-number__spin.plus {
+        right: 15px;
+    }
+
+    .jq-number__spin.minus {
+        left: 15px;
+    }
+
+    .jq-number__spin:after {
+        content: '';
+        position: absolute;
+        top: 6px;
+        left: 0;
+        width: 0;
+        height: 0;
+        background-color: $title-color;
+        width: 12px;
+        height: 1px;
+
+    }
+
+    .jq-number__spin.plus::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 6px;
+        background-color: $title-color;
+        width: 1px;
+        height: 12px;
+
+    }
+
+    &__item-text {
+        margin-bottom: 40px;
+
+        span {
+            display: block;
+            color: $title-color;
+            @extend %Roboto-400;
+            font-size: 18px;
+        }
+    }
+}
+
+.product-info {
+    &__list {
+        margin-bottom: 30px;
+    }
+
+    &__item {
+        margin-bottom: 5px;
+        display: flex;
+    }
+
+    &__title {
+        min-width: 100px;
+        color: $title-color;
+    }
+
+    &__link {
+        path {
+            fill: $deafualt-color;
+        }
+
+        &+.product-info__link {
+            margin-left: 15px;
+        }
+
+        &:hover {
+            path {
+                fill: $accent-color;
+            }
+        }
+    }
+}
+
+
+.product-slide {
+    display: flex;
+
+    &__thumb {
+        max-width: 140px;
+        margin-right: 30px;
+    }
+
+    &__thumb-item {
+        margin-bottom: 30px;
+        width: 140px;
+        height: 140px;
+        cursor: pointer;
+
+        img {
+            width: 140px;
+            height: 140px;
+            object-fit: contain;
+        }
+    }
+
+    &__big {
+        width: 560px;
+
+        img {
+            width: 560px;
+            height: 650px;
+            object-fit: cover;
+        }
+    }
+}
+
+.product-filter {
+
+    &__color,
+    &__size {
+        margin-bottom: 35px;
+
+        label {
+            margin-right: 10px;
+            display: inline-block;
+        }
+    }
+
+    &__color-input {
+        @extend %checkbox-hidden;
+
+        &:checked {
+            &+.product-filter__color-checkbox {
+                border-color: $accent-color;
+            }
+        }
+    }
+
+    &__color-checkbox {
+        padding: 1px;
+        border: 1px solid #ececec;
+        cursor: pointer;
+        width: 24px;
+        height: 24px;
+        position: relative;
+        display: inline-block;
+
+        span {
+            position: absolute;
+            width: 16px;
+            height: 16px;
+            top: 3px;
+            left: 3px;
+            display: inline-block;
+        }
+    }
+
+    &__color-title,
+    &__size-title {
+        font-size: 18px;
+        margin-bottom: 8px;
+        color: $title-color;
+        @extend %Roboto-400;
+    }
+
+    &__size {
+        label {
+            margin-right: 10px;
+            display: inline-block;
+        }
+    }
+
+    &__size-checkbox {
+        border: 1px solid #ececec;
+        padding: 10px;
+        display: inline-block;
+    }
+
+    &__size-input {
+        @extend %checkbox-hidden;
+
+        &:checked {
+            &+.product-filter__size-checkbox {
+                border-color: $accent-color;
+            }
+        }
+    }
+}
+
+.product-tabs {
+    padding-top: 110px;
+
+    &__top {
+        border-bottom: 1px solid #f0f0f0;
+        margin-bottom: 40px;
+        @extend %Roboto-400;
+        font-size: 22px;
+    }
+
+    &__top-item {
+        display: inline-block;
+        margin-bottom: 10px;
+
+        &+& {
+            margin-left: 55px;
+        }
+    }
+
+    &__top-item--active {
+        color: $title-color;
+        position: relative;
+
+        &::after {
+            content: '';
+            position: absolute;
+            bottom: -11px;
+            left: 0;
+            width: 100%;
+            height: 1px;
+            background-color: $accent-color;
+        }
+    }
+
+    &__content-item {
+        display: none;
+
+        &.product-tabs__content-item--active {
+            display: block;
+        }
+    }
+}
+
+.comments {
+    margin-bottom: 40px;
+    display: flex;
+
+    &__img {
+        min-width: 71px;
+        height: 71px;
+        margin-right: 30px;
+        border-radius: 50%;
+        overflow: hidden;
+        object-fit: cover;
+    }
+
+    &__content-top {
+        display: flex;
+        margin-bottom: 10px;
+    }
+
+    &__content-name {
+        color: $title-color;
+        margin-right: 13px;
+        @extend %Roboto-400;
+    }
+
+    &__content-date {
+        padding-left: 13px;
+        position: relative;
+
+        &::after {
+            content: '';
+            position: absolute;
+            width: 1px;
+            height: 15px;
+            background-color: $deafualt-color;
+            left: 0;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+    }
+
+    &__content-star {
+        margin: 0;
+        margin-left: auto;
+    }
+
+    &__content-text {
+        margin-bottom: 10px;
+    }
+
+    &__content-reply {
+        display: inline-block;
+        padding-left: 25px;
+        position: relative;
+
+        &::before {
+            content: '';
+            top: 50%;
+            transform: translateY(-50%);
+            position: absolute;
+            left: 0;
+            width: 15px;
+            height: 13px;
+            background-image: url('../images/icons/reply.svg')
+        }
+    }
+}
+
+.comments-form {
+    padding-bottom: 60px;
+    border-bottom: 1px solid #f0f0f0;
+
+    &__title {
+        color: $title-color;
+        font-size: 22px;
+        @extend %Roboto-400;
+        padding-bottom: 10px;
+        margin-bottom: 30px;
+        position: relative;
+
+        &::after {
+            content: '';
+            position: absolute;
+            height: 1px;
+            width: 50px;
+            background-color: $accent-color;
+            bottom: 0;
+            left: 0;
+        }
+    }
+
+    &__rating {
+        margin-bottom: 30px;
+    }
+
+    &__label {
+        margin-right: 25px;
+    }
+
+    &__input {
+        @extend %checkbox-hidden;
+
+        &:checked+.comments-form__radio {
+            svg path {
+                fill: #ffc35b;
+            }
+        }
+    }
+
+    &__radio {
+        cursor: pointer;
+
+        path {
+            fill: $deafualt-color;
+        }
+    }
+
+    &__rating-title {
+        color: $title-color;
+        margin-right: 60px;
+    }
+
+    &__box-input {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__text-input {
+        max-width: 570px;
+        flex-grow: 1;
+        display: inline-block;
+        height: 50px;
+        padding: 0 20px;
+        border: 1px solid #f0f0f0;
+    }
+
+    &__textarea {
+        border: 1px solid #f0f0f0;
+        padding: 15px 20px;
+        display: block;
+        width: 100%;
+        height: 225px;
+        resize: none;
+        margin-bottom: 40px;
+    }
+
+    &__btn {
+        border: none;
+        @extend %btn;
+        cursor: pointer;
+    }
+}
+
+
+.related {
+    padding: 50px 0 120px;
+
+    &__title {
+        margin-bottom: 50px;
+    }
+
+    &__items {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-column-gap: 30px;
+        text-align: center;
+
+        .product-item__img-box {
+            height: auto;
+        }
+
+        .product-item__title {
+            padding: 5px 0;
+        }
+    }
 }
 
 @import'media';
