--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2176,4 +2176,136 @@
     }
 }
 
+
+.map {
+    padding: 120px 0;
+
+    #map {
+        width: 100%;
+        height: 450px
+    }
+
+}
+
+.contact {
+    padding-bottom: 120px;
+
+    &__inner {
+        display: flex;
+        justify-content: space-between
+    }
+
+    &__info {
+        max-width: 370px;
+        margin-right: 30px;
+    }
+
+    &__info-title {
+        font-size: 48px;
+        line-height: 58px;
+        @extend %Roboto-700;
+        color: $title-color;
+        margin-bottom: 20px;
+    }
+
+    &__info-text {
+        margin-bottom: 60px;
+    }
+
+    &__info-item {
+        color: $title-color;
+        margin-top: 55px;
+        padding-left: 80px;
+        position: relative;
+
+        &::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 60px;
+            height: 60px;
+            box-shadow: 0px 5px 20px 0px rgba(146, 146, 146, 0.3);
+        }
+
+        &::before {
+            content: '';
+            position: absolute;
+            background-repeat: no-repeat;
+            background-image: url('../images/icons/phone_icon.svg');
+            width: 20px;
+            height: 20px;
+            left: 20px;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+    }
+
+    &__info-item--email::before {
+        width: 18px;
+        height: 20px;
+        background-image: url('../images/icons/mail.svg');
+    }
+
+    &__info-item--location::before {
+        left: 23px;
+        width: 14px;
+        height: 20px;
+        background-image: url('../images/icons/Location-icon.svg');
+    }
+
+    &__info-tel {
+        color: $title-color;
+        display: block;
+    }
+
+    &__form {
+        padding: 60px 40px;
+        width: 100%;
+        box-shadow: 0px 5px 20px 0px rgba(146, 146, 146, 0.3);
+    }
+
+    &__form-title {
+        color: $title-color;
+        @extend %Roboto-700;
+        font-size: 22px;
+        margin-bottom: 20px;
+    }
+
+    &__form-input {
+        width: 100%;
+        background-color: $bg-color;
+        display: block;
+        border: none;
+        height: 60px;
+        padding:0 24px;
+        margin-bottom: 30px;
+    }
+
+    &__form-textarea {
+        width: 100%;
+        display: block;
+        resize: none;
+        display: block;
+        background-color: $bg-color;
+        padding: 24px;
+        height: 200px;
+        margin-bottom: 30px;
+    }
+
+    &__form-box{
+        display: flex;
+        justify-content: space-between;
+        input{
+            max-width: 330px;
+        }
+
+    }
+    &__form-btn{
+        @extend %btn;
+    }
+}
+
+
 @import'media';
