--- a/app/scss/404.scss
+++ b/app/scss/404.scss
@@ -2,7 +2,7 @@
 @import 'fonts';
 @import 'reset';
 @import 'global';
-@import '../module/header/header';
+@import '../module/header/header.scss';
 @import '../module/footer/footer';
 
 
