--- a/app/404.njk
+++ b/app/404.njk
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/404-page.min.css">
+    <link rel="stylesheet" href="css/404.min.css">
+   <link rel="stylesheet" href="css/style.min.css">
     <title>Marcho</title>
 
 </head>
@@ -26,7 +27,7 @@
                         <a class="page-404__link" href="#">BACK TO HOME</a>
                     </div>
                     <div class="page-404__content">
-                        <img src="./images/404.png" alt="error">
+                        <img class='page-404__img' src="./images/404.png" alt="error">
                     </div>
                 </div>
             </div>
