--- a/app/module/category-info/category-info.scss
+++ b/app/module/category-info/category-info.scss
@@ -128,3 +128,104 @@
         @extend %Roboto-400;
     }
 }
+
+
+@media(max-width:1200px) {
+    .categories-info {
+        .info {
+            &__item {
+                width: 340px;
+                padding: 20px 10px;
+            }
+        }
+    }
+}
+
+@media(max-width:1100px) {
+    .categories-info {
+        .info {
+            display: block;
+
+            &__item {
+                width: 100%;
+                padding: 20px 10px;
+                margin-bottom: 20px;
+            }
+
+            &__item-title {
+                margin: 20px 0 10px;
+            }
+        }
+    }
+
+    .categories {
+        &__items {
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: auto;
+        }
+
+        &__item {
+            background-position: 70% 4%;
+
+            &:nth-child(1) {
+                grid-row: auto;
+            }
+
+            &:nth-child(2) {
+                grid-column: auto;
+            }
+        }
+    }
+}
+
+@media(max-width:1100px) {
+    .categories {
+        &__items {
+            min-height: 385px;
+        }
+
+        &__item {
+            background-image: none !important;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 0;
+        }
+
+        &__item:nth-child(1) {
+            background-color: #f4dff0;
+        }
+
+        &__item:nth-child(2) {
+            background-color: #d7efef;
+        }
+
+        &__item:nth-child(3) {
+            background-color: #fff6a7;
+        }
+
+        &__item:nth-child(4) {
+            background-color: #ededed;
+        }
+    }
+}
+
+
+@media(max-width:620px) {
+    .categories {
+        &__items {
+            grid-template-columns: repeat(1, 1fr);
+            grid-template-rows: auto;
+        }
+    }
+} 
+@media(max-width:375px) {
+    .categories-info {
+        .info {
+            &__item-title {
+                font-size: 20px;
+            }
+        }
+    }
+}
