--- a/app/module/promo/promo.scss
+++ b/app/module/promo/promo.scss
@@ -56,6 +56,7 @@
         margin-top: 55px;
     }
 }
+
 .partners {
     padding-top: 75px;
 
@@ -65,5 +66,61 @@
         justify-content: center;
         justify-content: space-between;
         align-items: center;
+    }
+}
+
+@media(max-width:620px) {
+    .promo {
+        padding: 60px 0;
+
+        &__clock {
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+
+        &__clock-item {
+            margin: 20px 33px;
+        }
+    }
+
+    .partners {
+        padding: 60px 0;
+
+        &__list {
+            flex-wrap: wrap;
+            justify-content: center;
+            height: auto;
+        }
+
+        &__item {
+            margin: 10px 35px;
+        }
+    }
+}
+
+@media(max-width:500px) {
+
+    .partners {
+        &__item {
+            margin: 10px 21px;
+        }
+    }
+}
+
+@media(max-width:450px) {
+    .promo {
+        &__clock {
+            margin-top: 30px;
+        }
+
+        &__clock-item {
+            margin: 8px;
+        }
+    }
+
+    .partners {
+        &__item {
+            margin: 5px 15px;
+        }
     }
 }
