--- a/app/module/video-fashion/video-fashion.scss
+++ b/app/module/video-fashion/video-fashion.scss
@@ -34,7 +34,7 @@
     }
 
     &__title {
-        text-align-last: left;
+        text-align: left;
         margin-bottom: 55px;
     }
 
@@ -44,5 +44,42 @@
 
     &__link {
         @extend %btn;
+    }
+}
+
+
+@media(max-width:1050px) {
+    .video-fashion {
+        &__inner {
+            display: block;
+        }
+
+        &__popup {
+            max-width: 100%;
+            background-position: center top;
+        }
+
+        &__content {
+            max-width: 100%;
+        }
+    }
+}
+
+@media(max-width:620px) {
+    .video-fashion {
+        padding: 60px 0;
+
+        &__popup {
+            height: 280px;
+        }
+
+        &__title {
+            text-align: center;
+        }
+
+        &__subtitle {
+            padding-top: 40px;
+            font-size: 18px;
+        }
     }
 }
