--- a/app/scss/product.scss
+++ b/app/scss/product.scss
@@ -6,4 +6,5 @@
 @import '../module/header/header';
 @import '../module/footer/footer';
 @import '../module/top/top';
+@import '../module/product/product';
 
