--- a/app/scss/shop.scss
+++ b/app/scss/shop.scss
@@ -6,4 +6,6 @@
 @import '../module/header/header';
 @import '../module/footer/footer';
 @import '../module/top/top';
+@import '../module/product/product';
+
 
